<resources>
    <string name="app_name">Himawari</string>
    <string name="wifi_only_key">wifi_only</string>
    <string name="wifi_only_title">Use only Wi-Fi</string>
    <string name="wifi_only_summary">Uncheck to allow download over cellular data connection</string>
    <string name="update_period_key">update_period</string>
    <string name="update_period_title">Update Period</string>
    <string name="update_period_summary">Select how often to fetch a new image</string>
    <string name="zoom_level_key">zoom_level</string>
    <string name="zoom_level_title">Zoom Level</string>
    <string name="zoom_level_summary">Select level of zoom (default 1)</string>
    <string name="forced_resolution_key">forced_resolution</string>
    <string name="forced_resolution_title">Forced Resolution</string>
    <string name="forced_resolution_summary">Force app to download images at a specific resolution. Default behaviour is to download images as most appropriate for screen size and zoom level</string>
</resources>
